[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["TuNombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
discord.py = "^2.5.2"
aiohttp = "^3.12.9"
flask = "^3.1.1"

[tool.poetry.scripts]
start = "main:main"  # Si tu archivo main.py tiene una función main()

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
